fix text wrapping accompaniment page

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ main {
     font-size: 1rem;
     opacity: 0.6;
     margin-bottom: 3rem;
-    max-width: 500px;
+    max-width: 600px;
     text-align: center;
     line-height: 1.5;
     padding: 0 1 rem;
